--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
@@ -26,7 +26,7 @@
     <x:String x:Key="RestartIcon">&#xE9F3;</x:String>
     <x:String x:Key="ClearScreen">&#xEA99;</x:String>
     <x:String x:Key="ShowUnicodeMapIcon">&#xEBDB;</x:String>
-    <x:String x:Key="CodeLibraryIcon">&#xED25;</x:String>
+    <x:String x:Key="OpenFileIcon">&#xED25;</x:String>
     <x:String x:Key="SaveIcon">&#xE105;</x:String>
     <x:String x:Key="SaveAsIcon">&#xEA35;</x:String>
     <x:String x:Key="SettingsIcon">&#xE115;</x:String>
