--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
@@ -4,14 +4,37 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:sections="using:Brainf_ckSharp.Uwp.Controls.SubPages.Shell.UserGuide.Sections"
-    xmlns:userGuide="using:Brainf_ckSharp.Uwp.Bindings.Converters.UserGuide"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
-    xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
+    xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
+
+        <!--Source code template-->
+        <DataTemplate x:Key="SourceCodeTemplate">
+            <StackPanel Spacing="4">
+                <TextBlock
+                    Text="Sample code"
+                    FontWeight="SemiBold"
+                    FontSize="18"
+                    TextLineBounds="Tight"
+                    Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    HorizontalTextAlignment="Left"/>
+                <TextBlock
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    HorizontalTextAlignment="Left"
+                    TextWrapping="Wrap"
+                    TextTrimming="CharacterEllipsis"
+                    MaxLines="2"
+                    FontSize="14">
+                    <Span attachedProperties:Brainf_ckInlineFormatterHelper.Source="{Binding}"/>
+                </TextBlock>
+            </StackPanel>
+        </DataTemplate>
 
         <!--Zoomed in header template-->
         <DataTemplate x:Key="SectionZoomedInHeaderTemplate">
@@ -103,9 +126,20 @@
                     ItemsSource="{x:Bind ViewModel.View, Mode=OneWay}"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    IsItemClickEnabled="False"
+                    IsItemClickEnabled="True"
                     SelectionMode="None"
-                    Margin="0,-8,0,0">
+                    Margin="0,-8,0,0"
+                    ItemTemplate="{StaticResource SourceCodeTemplate}"
+                    Background="#60000000">
+                    <ListView.Resources>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Margin" Value="0,0,0,4"/>
+                            <Setter Property="Padding" Value="12,16,12,16"/>
+                            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            <Setter Property="Background" Value="#FF171717"/>
+                        </Style>
+                    </ListView.Resources>
                     <ListView.GroupStyle>
                         <GroupStyle
                             HeaderTemplate="{StaticResource SectionZoomedInHeaderTemplate}"
