Refactored the semantic zoom templates

--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="Styles/ButtonsStyles.xaml"/>
                 <ResourceDictionary Source="Styles/ClassicStyles.xaml"/>
                 <ResourceDictionary Source="Styles/MiscStyles.xaml"/>
+                <ResourceDictionary Source="Styles/SemanticZoomStyles.xaml"/>
                 <ResourceDictionary Source="Styles/SubPageStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TelerikStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TextStyles.xaml"/>
