--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
@@ -8,6 +8,7 @@
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:ide="using:Brainf_ckSharp.Uwp.Models.Ide"
     xmlns:jumpList="using:Brainf_ckSharp.Uwp.Controls.DataTemplates.JumpList"
+    xmlns:objectModel="using:Brainf_ckSharp.Uwp.Extensions.System.Collections.ObjectModel"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -70,8 +71,8 @@
                     <ListView.GroupStyle>
                         <GroupStyle HeaderContainerStyle="{StaticResource ExpandedListViewHeaderItemStyle}">
                             <GroupStyle.HeaderTemplate>
-                                <DataTemplate>
-                                    <jumpList:SemanticZoomZoomedInViewHeaderTemplate Title="{Binding Key, Mode=OneTime}"/>
+                                <DataTemplate x:DataType="objectModel:IGroupedCollection">
+                                    <jumpList:SemanticZoomZoomedInViewHeaderTemplate Title="{x:Bind Key}"/>
                                 </DataTemplate>
                             </GroupStyle.HeaderTemplate>
                         </GroupStyle>
@@ -94,10 +95,10 @@
                         </Style>
                     </ListView.Resources>
                     <ListView.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate x:DataType="ICollectionViewGroup">
                             <jumpList:SemanticZoomZoomedOutViewHeaderTemplate
-                                Title="{Binding Group.Key, Mode=OneTime}"
-                                Description="{Binding Group.Key, Mode=OneTime}"/>
+                                Title="{x:Bind Group.(objectModel:IGroupedCollection.Key)}"
+                                Description="{x:Bind Group.(objectModel:IGroupedCollection.Key)}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
