--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
@@ -12,6 +12,8 @@
     xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
     xmlns:styleSelectors="using:Brainf_ckSharp.Uwp.StyleSelectors"
     xmlns:extensions="using:Brainf_ckSharp.Uwp.Extensions.Windows.Storage"
+    xmlns:markupExtensions="using:Brainf_ckSharp.Uwp.MarkupExtensions"
+    xmlns:functions="using:Brainf_ckSharp.Uwp.Bindings.Functions.Ide"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -47,7 +49,18 @@
         <DataTemplate
             x:Key="RecentFileTemplate"
             x:DataType="ide:CodeLibraryEntry">
-            <StackPanel Spacing="8">
+            <StackPanel
+                Spacing="8"
+                Background="Transparent"> <!--Hit target for the context menu-->
+                <StackPanel.ContextFlyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem Text="{x:Bind functions:CodeLibraryEntryFavoriteStateFormatter.FormatLabel(Metadata.IsFavorited)}">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="{x:Bind functions:CodeLibraryEntryFavoriteStateFormatter.FormatIcon(Metadata.IsFavorited)}"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+                    </MenuFlyout>
+                </StackPanel.ContextFlyout>
                 <TextBlock
                     Text="{x:Bind Title}"
                     FontWeight="Normal"
